--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>El blog de Santi</title>
 </head>
 <body>
-    hola
+    <h1>Curso esencial de HTML y CSS</h1>
+    <p>Este es el inicio de tu carrera como Desarrollador Web, empezarás aprendiendo HTML y CSS para la creación de contenidos, en el nivel 2 aprenderás de componentes y en 3 sobre layouts.</p>
+    <img src="images/google-chrome.png" alt="logo de google-chrome" title="logo de google chrome">
+    <img src="images/visual-studio-code.png" alt="logo de visual-studio-code" title="logo de visual studio code">
+    <img src="images/figma.png" alt="logo de figma" title="logo de figma">
+    <img src="images/github.png" alt="logo de github" title="logo de github">
+
 </body>
 </html>
