--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>El blog de Santi</title>
- 
+    <meta property="og:title" content=" EL blog de Santi">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://morasano.github.io/curso-esencial-html-css/">
+    <meta property="og:image" content="">
 </head>
 <body>
     <div class="hero"></div>
@@ -157,7 +160,7 @@
                     
                     <h3 id="dom">DOM</h3>
                     <p>El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
-                    <img src="/images/dom.png" alt="Estructura de árbol que representa al Document Object Model">
+                    <img src="images/dom.png" alt="Estructura de árbol que representa al Document Object Model">
                     
                     <h3 id="semantica">Semántica</h3>
                     <p>La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más relevantes que otras, esto ayudará a los motores de búsqueda como Google o Duck Duck Go a diferenciar tu contenido, categorizar y será la herramientas más valiosa para estar en los primeros resultados de búsqueda SEO. También ayudará a la accesibilidad de tu sitio web, para que personas con habilidades diferentes puedan entender cada contenido.</p>
