--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>El blog de Santi</title>
     <meta property="og:title" content=" EL blog de Santi">
     <meta property="og:type" content="website">
+    <meta property="og:description" content="Todo lo que necesitas saber en tu dia a dia como frontend">
     <meta property="og:url" content="https://morasano.github.io/curso-esencial-html-css/">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://morasano.github.io/curso-esencial-html-css/images/css.png">
 </head>
 <body>
     <div class="hero"></div>
