--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                     <h3 id="figma">Figma</h3>
                     <p>
                         Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.
-                        <h3 id="github">Github</h3>
                     </p>
                     <img src="images/github.png" alt="logo de github" title="logo de github">
+                    <h3 id="github">Github</h3>
                     <p>
                         Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.
                     </p>
@@ -264,5 +264,14 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        <div class="footer-content">
+          <p class="footer-copyright">© Santiago Morasano - 2022 </p>
+          <div class="social-media">
+            <a target="_blank  "href="https://www.instagram.com/morasano/"><img src="./images/ig.png" class="iconos" alt="red social de instagram" title="red social de instagram" ></a>
+            <a target="_blank "href="https://twitter.com/morasano_"><img src="./images/tw.png" class="iconos alt="red social de twitter" title="red social de twitter Twitter"></a>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
