--- a/nemium-e.html
+++ b/nemium-e.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles-logico.css">
+    <link rel="stylesheet" href="css/css-e.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>El blog de Santi</title>
@@ -32,7 +32,6 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <div class="hero"></div>
     <div class="header">
         <div class="wrapper">
             <div class="header-content">
@@ -169,7 +168,7 @@
                         </p>
                         <p>
                             <span>
-                                Leonidas Esteban
+                                - Leonidas Esteban
                             </span>
                         </p>
                     </blockquote>
@@ -214,7 +213,7 @@
                     
                 </section>
                 <hr>
-                <section class="section-content">
+                <section class="section-content-2">
                     <h2>Modelo de caja</h2>
                     <h3>El modelo de caja está compuesto por:</h3>
                     <p>Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.</p>
